--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -11,6 +11,6 @@
   justify-content: space-between;
   text-align: start;
   border-radius: 4px;
-  border: 2px solid #3a2d2d;
+  border: 2px solid #f5a40f;
   padding: 8px;
 }
