--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -13,8 +13,8 @@
   justify-content: center;
   align-items: center;
   border-radius: 4px;
-  border: 1px solid #dfdcdc;
-  background-color: #dfdcdc;
+  border: 1px solid #f8b702;
+  background-color: #f7c25f;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
@@ -22,7 +22,7 @@
   margin-bottom: auto;
 }
 .btn:hover {
-  border: 1px solid #504f4f;
-  background-color: #807e7e;
+  border: 1px solid #f11414;
+  background-color: #fc8686;
   color: #dfdcdc;
 }
