--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,24 +1,26 @@
 .form {
   display: flex;
   flex-direction: column;
-  width: 268px;
+  width: 288px;
   font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.04em;
   border-radius: 4px;
-  border: 2px solid #0f0f0f;
+  border: 2px solid #f57905;
   padding: 16px;
 }
 .label {
   text-align: start;
   font-size: 14px;
-  color: #0f0f0f;
+  color: #f7f2f2;
 }
 .input {
   border-radius: 4px;
-  border: 1px solid #3b3b3b;
+  border: 1px solid #f3a805;
   height: 32px;
   margin-bottom: 8px;
+  background-color: inherit;
+  color: #f1b668;
 }
 .btn {
   display: flex;
@@ -29,8 +31,8 @@
   border-radius: 4px;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid #dfdcdc;
-  background-color: #dfdcdc;
+  border: 1px solid #ff9409;
+  background-color: #f1b668;
   font-size: 14px;
   font-weight: 500;
   cursor: pointer;
