--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -8,6 +8,8 @@
   width: 294px;
   height: 32px;
   border-radius: 4px;
-  border: 1px solid #3b3b3b;
+  border: 1px solid #f89615;
   margin-bottom: 12px;
+  background-color: inherit;
+  color: #f1b465;
 }
